--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,8 @@ html{
 }
 
 h1, h2, h3, h4, h5, h6{
-    font-weight: 500
+    font-weight: 500;
+    letter-spacing:1.5px;
 }
 
 .img-fluid{
@@ -17,15 +18,69 @@ h1, h2, h3, h4, h5, h6{
 }
 
 .container{
-    height: 100%;
+    height: 100vh;
     width: auto;
-    margin: 0;
+    margin:0;
     padding: 0;
+    background-position: right;
 }
 
 .hero{
-  background: url(../images/exp-hero.jpg) no-repeat center;
-  height: 100vh;
-  width: inherit;
-  background-size:cover;  
+    background: url(../images/exp-hero.jpg) no-repeat;
+    background-size:cover;
+    height: 100%;
+    background-position:right;    
+}
+
+header h1{
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-top: 17%;
+  margin-left: 5%;
+  font-size: 330%;
+}
+
+header h4{
+  margin-top: 0.5%;
+  margin-bottom: 0;
+  margin-left: 5%;
+  font-weight: 300;
+}
+
+header li{
+  list-style: none;
+  margin-top: 3%;
+  font-size: 14px;
+  letter-spacing: 0.5px;
+}
+
+.button{
+  border: 4px solid;
+  border-radius: 4em;
+  border-color: #C65030;
+  display: inline-block;
+  margin-top: 1.5%;
+  margin-left: 5%;
+  height: 3.2em;
+  width: 20em;
+  text-align: center;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+.inside{
+    background: url(../images/exp-interior.jpg) no-repeat;
+    background-size:cover;
+    height: 100%;
+    background-position:right;
 }
