--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ html{
    font-family: 'Raleway', Helvetica, Arial, sans-serif;
    color: #FFFFFF;
    background-color: #08110D;
+   margin: 0;
 }
 
 h1, h2, h3, h4, h5, h6{
@@ -13,37 +14,46 @@ h1, h2, h3, h4, h5, h6{
     letter-spacing:1.5px;
 }
 
-.img-fluid{
-    max-width: 100%;
+p{
+  letter-spacing: .5px;
+  font-weight: 300;
+  font-size: 13px;
 }
 
+.row{
+  margin: 0; 
+  height: 100vh;
+}
+
+}
 .container{
     height: 100vh;
     width: auto;
     margin:0;
     padding: 0;
-    background-position: right;
+
 }
 
 .hero{
     background: url(../images/exp-hero.jpg) no-repeat;
     background-size:cover;
     height: 100%;
-    background-position:right;    
+    background-position:center; 
 }
 
 header h1{
   margin-top: 0;
   margin-bottom: 0;
-  padding-top: 17%;
-  margin-left: 5%;
-  font-size: 330%;
+  padding-top: 17.5%;
+  margin-left: 7%;
+  font-size: 320%;
+
 }
 
 header h4{
   margin-top: 0.5%;
   margin-bottom: 0;
-  margin-left: 5%;
+  margin-left: 7%;
   font-weight: 300;
 }
 
@@ -52,6 +62,7 @@ header li{
   margin-top: 3%;
   font-size: 14px;
   letter-spacing: 0.5px;
+  font-weight: 700;
 }
 
 .button{
@@ -60,27 +71,165 @@ header li{
   border-color: #C65030;
   display: inline-block;
   margin-top: 1.5%;
-  margin-left: 5%;
+  margin-left: 7%;
   height: 3.2em;
   width: 20em;
   text-align: center;
 }
 
+.headlights{
+    background: url(../images/exp-headlight.jpg) no-repeat;
+    background-size:contain;
+    background-position:100% 70%;
+}
 
+.headlights h2{
+  margin-top: 10%;
+  margin-left: 5%;
+}
 
-
-
-
-
-
-
-
-
-
+.headlights p{
+  margin-left: 5%;
+  display: block;
+  width: 45%;
+  line-height: 2;
+}
 
 .inside{
     background: url(../images/exp-interior.jpg) no-repeat;
     background-size:cover;
     height: 100%;
-    background-position:right;
+    background-position:center;
 }
+
+.back{
+    background: url(../images/exp-tail.jpg) no-repeat;
+    background-size:contain;
+    background-position: 100% 65%;
+    height: 100vh;
+  }
+
+.back h2{
+  margin-top: 10%;
+  margin-left: 5%;
+}
+
+.back p{
+  margin-left: 5%;
+  display: block;
+  width: 45%;
+  line-height: 2;
+}
+
+.steering{
+    background: url(../images/exp-steering.jpg) no-repeat;
+    background-size:cover;
+    height: 100%;
+    background-position:center;
+}
+
+.interior h1{
+    padding-top: 16%;
+    font-size: 280%;
+    display: block;
+    text-align: center;
+}
+
+.steering h1{
+    padding-top: 20%;
+    font-size: 300%;
+    display: block;
+    text-align: center;
+}
+
+.logo{
+  display: inline-block;
+  padding-top: 1.5%;
+  text-align: center;
+  width: 100%;
+}
+
+.img-fluid{
+    max-width: 90px;
+}
+
+.bottom-title{
+  width: 100%;
+  text-align: center;
+  padding-top: 1%;
+}
+
+.ending .row{
+  padding-top: 4%;
+}
+
+.ending .img-fluid{
+  max-width: 60%;
+  padding-top: 3%;
+}
+
+.ending h1{
+  padding-left: 15%;
+  padding-top: 8%;
+  font-size: 350%;
+  color: #167861;
+
+}
+
+.ending p{
+  padding-left: 15%;
+  padding-right: 11%;
+  line-height: 2;
+}
+
+.ending li{
+  list-style-type: none;
+  font-weight: 700;
+  letter-spacing: 0.5px;
+  font-size: 14px;
+  margin-top: 3%;
+
+}
+
+.ending .button{
+  border: 4px solid;
+  border-radius: 4em;
+  border-color: #C65030;
+  display: inline-block;
+  margin-top: 10%;
+  margin-left:0;
+  height: 3.2em;
+  width: 20em;
+  text-align: center;
+}
+
+.icons img{
+  margin-top: 2%;
+  padding-left: 1%;
+  padding-right: 1%;
+  padding-bottom: 6%;
+}
+
+footer li{
+  list-style-type: none;
+  letter-spacing: 0.5px;
+  font-size: 12px;
+  line-height: 3;
+  display: block;
+
+}
+
+.right-side{
+  margin-left: 0%;
+  margin-right: 0%;
+}
+
+
+.ending .row{
+  height: auto;
+}
+
+footer .row{
+  height: auto;
+}
+
