--- a/css/style.css
+++ b/css/style.css
@@ -23,22 +23,22 @@ p{
 .row{
   margin: 0; 
   height: 100vh;
+  position: relative;
 }
 
-}
 .container{
     height: 100vh;
     width: auto;
     margin:0;
     padding: 0;
-
 }
 
 .hero{
-    background: url(../images/exp-hero.jpg) no-repeat;
+    background: url(../images/exp-hero.jpg);
     background-size:cover;
-    height: 100%;
+    background-attachment: fixed;
     background-position:center; 
+
 }
 
 header h1{
@@ -47,7 +47,6 @@ header h1{
   padding-top: 17.5%;
   margin-left: 7%;
   font-size: 320%;
-
 }
 
 header h4{
@@ -81,72 +80,77 @@ header li{
     background: url(../images/exp-headlight.jpg) no-repeat;
     background-size:contain;
     background-position:100% 70%;
+    background-attachment: fixed;
 }
 
 .headlights h2{
   margin-top: 10%;
-  margin-left: 5%;
+  margin-left: 7%;
+  color: #167861;
+
 }
 
 .headlights p{
-  margin-left: 5%;
+  margin-left: 7%;
   display: block;
-  width: 45%;
+  width: 65%;
+  font-size: 15px;
   line-height: 2;
 }
 
 .inside{
-    background: url(../images/exp-interior.jpg) no-repeat;
+    background: url(../images/exp-interior.jpg);
     background-size:cover;
-    height: 100%;
     background-position:center;
+    background-attachment: fixed;
+}
+
+.inside h1{
+    padding-top: 15%;
+    font-size: 300%;
+    text-align: center;
 }
 
 .back{
     background: url(../images/exp-tail.jpg) no-repeat;
     background-size:contain;
     background-position: 100% 65%;
-    height: 100vh;
-  }
+    background-attachment: fixed;
+ }
 
 .back h2{
   margin-top: 10%;
-  margin-left: 5%;
+  margin-left: 7%;
+  color: #167861;
 }
 
 .back p{
-  margin-left: 5%;
+  margin-left: 7%;
   display: block;
-  width: 45%;
+  width: 65%;
+  font-size: 15px;
   line-height: 2;
 }
 
 .steering{
-    background: url(../images/exp-steering.jpg) no-repeat;
+    background: url(../images/exp-steering.jpg);
     background-size:cover;
-    height: 100%;
     background-position:center;
-}
-
-.interior h1{
-    padding-top: 16%;
-    font-size: 280%;
-    display: block;
-    text-align: center;
+    background-attachment: fixed;
 }
 
 .steering h1{
-    padding-top: 20%;
+    padding-top: 15%;
     font-size: 300%;
-    display: block;
     text-align: center;
 }
 
 .logo{
   display: inline-block;
-  padding-top: 1.5%;
+  padding-top: 2.5%;
   text-align: center;
   width: 100%;
+
 }
 
 .img-fluid{
@@ -157,7 +161,10 @@ header li{
   width: 100%;
   text-align: center;
   padding-top: 1%;
+  padding-left: 0;
+  padding-right: 0;
 }
+
 
 .ending .row{
   padding-top: 4%;
@@ -173,10 +180,9 @@ header li{
   margin-top: 10%;
   font-size: 350%;
   color: #167861;
-
 }
 
-.ending p{
+.ending .col-lg-6 p{
   padding-left: 15%;
   padding-right: 11%;
   line-height: 2;
@@ -188,7 +194,6 @@ header li{
   letter-spacing: 0.5px;
   font-size: 14px;
   margin-top: 3%;
-
 }
 
 .ending .button{
@@ -204,10 +209,14 @@ header li{
 }
 
 .icons img{
-  margin-top: 2%;
+  padding-top: 0%;
   padding-left: 1%;
   padding-right: 1%;
   padding-bottom: 6%;
+}
+
+.icons .img-fluid{
+  max-width: 60px;
 }
 
 footer li{
@@ -216,7 +225,6 @@ footer li{
   font-size: 12px;
   line-height: 3;
   display: block;
-
 }
 
 .right-side{
@@ -232,4 +240,6 @@ footer li{
 footer .row{
   height: auto;
 }
+
+
 
