--- a/css/style.css
+++ b/css/style.css
@@ -25,18 +25,13 @@ p{
   height: 100vh;
 }
 
-.container{
-    height: 100vh;
-    width: auto;
-    margin:0;
-    padding: 0;
-}
 
 .hero{
-    background: url(../images/exp-hero.jpg)no-repeat;
+    background: url(../images/exp-hero.jpg) fixed;
     background-size:cover;
-    background-position:center; 
     height: 100%;
+    background-position:center; 
+    background-attachment: fixed;
 }
 
 header h1{
@@ -75,10 +70,9 @@ header li{
 }
 
 .headlights{
-    background: url(../images/exp-headlight.jpg) no-repeat;
+    background: url(../images/exp-headlight.jpg) no-repeat fixed;
     background-size:contain;
     background-position:100% 70%;
-    background-attachment: fixed;
 }
 
 .headlights h2{
@@ -97,10 +91,9 @@ header li{
 }
 
 .inside{
-    background: url(../images/exp-interior.jpg);
+    background: url(../images/exp-interior.jpg) fixed;
     background-size:cover;
     background-position:center;
-    background-attachment: fixed;
 }
 
 .inside h1{
@@ -110,10 +103,10 @@ header li{
 }
 
 .back{
-    background: url(../images/exp-tail.jpg) no-repeat;
+    background: url(../images/exp-tail.jpg) no-repeat fixed;
     background-size:contain;
     background-position: 100% 65%;
-    background-attachment: fixed;
+    height: 100vh;
  }
 
 .back h2{
@@ -131,10 +124,10 @@ header li{
 }
 
 .steering{
-    background: url(../images/exp-steering.jpg);
+    background: url(../images/exp-steering.jpg) fixed;
     background-size:cover;
+    height: 100%;
     background-position:center;
-    background-attachment: fixed;
 }
 
 .steering h1{
@@ -239,7 +232,7 @@ footer .row{
   height: auto;
 }
 
-@media (max-width:560px) {
+@media (max-width:500px) {
    .hero{
      padding:1.5em 0%;
      background-position: right;
@@ -275,23 +268,55 @@ footer .row{
      position: fixed no-repeat;
    }
 
+   header h1{
+    font-size: 225%;
+    padding-top:10%;
+   }
+
    .inside h1 {
      width:46%;
      text-align:left;
-     font-size: 300%;
+     font-size: 225%;
      display: block;
      margin-left: 7%;
-     margin-top: 25%;
+     margin-top: 20%;
    }
 
    .steering h1 {
      width:46%;
      text-align:left;
-     font-size: 300%;
+     font-size: 225%;
      display: block;
-     margin-left: 20%;
-     margin-top: 25%;
+     margin-left: 7%;
+     margin-top: 20%;
    }
      
+}
 
 
+@media (max-width:700px) {
+
+   .inside h1 {
+     text-align:left;
+     display: block;
+     margin-left: 7%;
+     font-size: 280%
+   }
+
+   .steering h1 {
+
+     text-align:left;
+     display: block;
+     margin-left: 7%;
+     font-size: 280%;
+   }
+}
+
+
+@media (max-width:850px) {
+
+   header h1{
+    font-size: 280%;
+    padding-top:14%;
+   }
+}
