--- a/css/style.css
+++ b/css/style.css
@@ -22,16 +22,18 @@ p{
 
 .row{
   margin: 0; 
-  height: 100vh;
+  height: 100vh
 }
 
 
 .hero{
-    background: url(../images/exp-hero.jpg) fixed;
+    background: url(../images/exp-hero.jpg) ;
     background-size:cover;
+    width: 100%;
     height: 100%;
     background-position:center; 
-    background-attachment: fixed;
+    background-attachment: absolute;
+    
 }
 
 header h1{
@@ -70,9 +72,10 @@ header li{
 }
 
 .headlights{
-    background: url(../images/exp-headlight.jpg) no-repeat fixed;
+    background: url(../images/exp-headlight.jpg) no-repeat ;
     background-size:contain;
     background-position:100% 70%;
+    background-attachment: absolute;
 }
 
 .headlights h2{
@@ -91,9 +94,10 @@ header li{
 }
 
 .inside{
-    background: url(../images/exp-interior.jpg) fixed;
+    background: url(../images/exp-interior.jpg);
     background-size:cover;
     background-position:center;
+    background-attachment: absolute;
 }
 
 .inside h1{
@@ -103,10 +107,11 @@ header li{
 }
 
 .back{
-    background: url(../images/exp-tail.jpg) no-repeat fixed;
+    background: url(../images/exp-tail.jpg) no-repeat;
     background-size:contain;
     background-position: 100% 65%;
     height: 100vh;
+    background-attachment: absolute;
  }
 
 .back h2{
@@ -124,10 +129,11 @@ header li{
 }
 
 .steering{
-    background: url(../images/exp-steering.jpg) fixed;
+    background: url(../images/exp-steering.jpg);
     background-size:cover;
     height: 100%;
     background-position:center;
+    background-attachment: absolute;
 }
 
 .steering h1{
