--- a/css/style.css
+++ b/css/style.css
@@ -27,13 +27,11 @@ p{
 
 
 .hero{
-    background: url(../images/exp-hero.jpg) ;
+    background: url(../images/exp-hero.jpg) fixed;
     background-size:cover;
     width: 100%;
     height: 100%;
     background-position:center; 
-    background-attachment: absolute;
-    
 }
 
 header h1{
@@ -72,10 +70,10 @@ header li{
 }
 
 .headlights{
-    background: url(../images/exp-headlight.jpg) no-repeat ;
+    background: url(../images/exp-headlight.jpg) no-repeat fixed;
     background-size:contain;
     background-position:100% 70%;
-    background-attachment: absolute;
+  
 }
 
 .headlights h2{
@@ -94,10 +92,10 @@ header li{
 }
 
 .inside{
-    background: url(../images/exp-interior.jpg);
+    background: url(../images/exp-interior.jpg) fixed;
     background-size:cover;
     background-position:center;
-    background-attachment: absolute;
+   
 }
 
 .inside h1{
@@ -107,11 +105,10 @@ header li{
 }
 
 .back{
-    background: url(../images/exp-tail.jpg) no-repeat;
+    background: url(../images/exp-tail.jpg) no-repeat fixed;
     background-size:contain;
     background-position: 100% 65%;
     height: 100vh;
-    background-attachment: absolute;
  }
 
 .back h2{
@@ -129,11 +126,11 @@ header li{
 }
 
 .steering{
-    background: url(../images/exp-steering.jpg);
+    background: url(../images/exp-steering.jpg) fixed;
     background-size:cover;
     height: 100%;
     background-position:center;
-    background-attachment: absolute;
+
 }
 
 .steering h1{
@@ -237,6 +234,23 @@ footer li{
 footer .row{
   height: auto;
 }
+
+
+.hero-header {
+  transform: translate3d(0,0,0);
+}
+
+.Element-header--fixed {
+  top: 0;
+  position: fixed;
+}
+
+
+
+
+
+
+
 
 @media (max-width:500px) {
    .hero{
