--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,106 @@ p{
   font-weight: 300;
   font-size: 13px;
 }
+.row{
+  margin: 0; 
+  height: 100vh
+}
+
+
+
+
+/* HEADER SECTION */
+
+
+  .hero{
+    background: url(../images/exp-hero.jpg);
+    background-size:cover;
+    background-attachment: absolute;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100vh;
+  }
+
+#page-intro h1{
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-top: 17.5%;
+  margin-left: 7%;
+  font-size: 320%;
+}
+
+#page-intro h4{
+  margin-top: 0.5%;
+  margin-bottom: 0;
+  margin-left: 7%;
+  font-weight: 300;
+}
+
+#page-intro li{
+  list-style: none;
+  margin-top: 3%;
+  font-size: 14px;
+  letter-spacing: 0.5px;
+  font-weight: 700;
+}
+
+.button{
+  border: 4px solid;
+  border-radius: 4em;
+  border-color: #C65030;
+  display: inline-block;
+  margin-top: 1.5%;
+  margin-left: 7%;
+  height: 3.2em;
+  width: 20em;
+  text-align: center;
+}
+
+
+
+/* SECTION 2 */
+
+
+.headlights{
+  background: url(../images/exp-headlight.jpg);
+  background-size:contain;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100vh;
+  background-position:100%;
+  background-attachment: absolute;
+}
+
+.headlights h2{
+  margin-top: 10%;
+  margin-left: 7%;
+  color: #167861;
+}
+
+.headlights p{
+  margin-left: 7%;
+  display: block;
+  width: 65%;
+  font-size: 15px;
+  line-height: 2;
+}
+
+
+
+.inside{
+    background: url(../images/exp-interior.jpg);
+    background-size:cover;
+    background-attachment: absolute;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100vh;
+}
+
+
+
+
+
+/*
 
 .row{
   margin: 0; 
@@ -27,12 +127,11 @@ p{
 
 
 .hero{
-    background: url(../images/exp-hero.jpg) fixed;
+    background: url(../images/exp-hero.jpg);
     background-size:cover;
     width: 100%;
-    height: 100%;
     background-position:center; 
-    transform: translate3d(0,0,0);
+    background-attachment: absolute;
 }
 
 header h1{
@@ -71,7 +170,7 @@ header li{
 }
 
 .headlights{
-    background: url(../images/exp-headlight.jpg) no-repeat fixed;
+    background: url(../images/exp-headlight.jpg) no-repeat;
     background-size:contain;
     background-position:100% 70%;
   
@@ -92,10 +191,12 @@ header li{
   line-height: 2;
 }
 
+
 .inside{
-    background: url(../images/exp-interior.jpg) fixed;
+    background: url(../images/exp-interior.jpg);
     background-size:cover;
     background-position:center;
+    background-attachment: absolute;
    
 }
 
@@ -106,7 +207,7 @@ header li{
 }
 
 .back{
-    background: url(../images/exp-tail.jpg) no-repeat fixed;
+    background: url(../images/exp-tail.jpg) no-repeat;
     background-size:contain;
     background-position: 100% 65%;
     height: 100vh;
@@ -127,10 +228,11 @@ header li{
 }
 
 .steering{
-    background: url(../images/exp-steering.jpg) fixed;
+    background: url(../images/exp-steering.jpg) ;
     background-size:cover;
     height: 100%;
     background-position:center;
+    background-attachment: absolute;
 
 }
 
@@ -235,7 +337,6 @@ footer li{
 footer .row{
   height: auto;
 }
-
 
 
 
