--- a/css/style.css
+++ b/css/style.css
@@ -26,10 +26,117 @@ p{
 
 
 
+.skrollr-desktop body {
+    height:100% !important;
+}
+
+#skrollr-body {
+    height:100%;
+    position:relative;
+    overflow: hidden;
+}
+
+
+.parallax-image.skrollable-between {
+    display:block;
+}
+
+.no-skrollr .parallax-image-wrapper {
+    display:none !important;
+}
+
+.parallax-image-wrapper {
+    position:fixed;
+    left:0;
+    width:100%;
+    overflow:hidden;
+    height:80vh;
+    top:-80vh;
+}
+
+.parallax-image {
+    display:none;
+    position:absolute;
+    bottom:0;
+    left:0;
+    width:100%;
+    background-repeat:no-repeat;
+    background-position:center;
+    background-size:cover;
+    height:100vh;
+    top:0;
+}
+
+.parallax-image.skrollable-between {
+    display:block;
+}
+
+.no-skrollr .parallax-image-wrapper {
+    display:none !important;
+}
+
+
+
+.skrollr .gap {
+    background: transparent !important;
+}
+
+
+
+
+
+
+
+
+
+
+#page-intro{
+    background-size:cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    -webkit-background-size: cover;
+ }
+
+#page-intro h1{
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-top: 17.5%;
+  margin-left: 7%;
+  font-size: 320%;
+}
+
+#page-intro h4{
+  margin-top: 0.5%;
+  margin-bottom: 0;
+  margin-left: 7%;
+  font-weight: 300;
+}
+
+#page-intro li{
+  list-style: none;
+  margin-top: 3%;
+  font-size: 14px;
+  letter-spacing: 0.5px;
+  font-weight: 700;
+}
+
+.button{
+  border: 4px solid;
+  border-radius: 4em;
+  border-color: #C65030;
+  display: inline-block;
+  margin-top: 1.5%;
+  margin-left: 7%;
+  height: 3.2em;
+  width: 20em;
+  text-align: center;
+}
+
+
 
 /* HEADER SECTION */
 
-
+/*
   .hero{
     background: url(../images/exp-hero.jpg);
     background-size:cover;
@@ -79,7 +186,7 @@ p{
 /* SECTION 2 */
 
 
-.headlights{
+#section-2{
   background: url(../images/exp-headlight.jpg);
   background-size:contain;
   background-repeat: no-repeat;
@@ -89,13 +196,13 @@ p{
   background-attachment: absolute;
 }
 
-.headlights h2{
+#section-2 h2{
   margin-top: 10%;
   margin-left: 7%;
   color: #167861;
 }
 
-.headlights p{
+#section-2 p{
   margin-left: 7%;
   display: block;
   width: 65%;
@@ -105,8 +212,8 @@ p{
 
 
 
-.inside{
-    background: url(../images/exp-interior.jpg);
+#section-3{
+
     background-size:cover;
     background-attachment: absolute;
     background-repeat: no-repeat;
