--- a/css/style.css
+++ b/css/style.css
@@ -50,8 +50,8 @@ p{
     left:0;
     width:100%;
     overflow:hidden;
-    height:80vh;
-    top:-80vh;
+    height:100vh;
+    top:-100vh;
 }
 
 .parallax-image {
@@ -133,67 +133,11 @@ p{
 }
 
 
-
-/* HEADER SECTION */
-
-/*
-  .hero{
-    background: url(../images/exp-hero.jpg);
-    background-size:cover;
-    background-attachment: absolute;
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 100vh;
-  }
-
-#page-intro h1{
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-top: 17.5%;
-  margin-left: 7%;
-  font-size: 320%;
-}
-
-#page-intro h4{
-  margin-top: 0.5%;
-  margin-bottom: 0;
-  margin-left: 7%;
-  font-weight: 300;
-}
-
-#page-intro li{
-  list-style: none;
-  margin-top: 3%;
-  font-size: 14px;
-  letter-spacing: 0.5px;
-  font-weight: 700;
-}
-
-.button{
-  border: 4px solid;
-  border-radius: 4em;
-  border-color: #C65030;
-  display: inline-block;
-  margin-top: 1.5%;
-  margin-left: 7%;
-  height: 3.2em;
-  width: 20em;
-  text-align: center;
-}
-
-
-
 /* SECTION 2 */
 
 
 #section-2{
-  background: url(../images/exp-headlight.jpg);
-  background-size:contain;
-  background-repeat: no-repeat;
-  width: 100%;
-  height: 100vh;
-  background-position:100%;
-  background-attachment: absolute;
+
 }
 
 #section-2 h2{
@@ -214,13 +158,11 @@ p{
 
 #section-3{
 
-    background-size:cover;
-    background-attachment: absolute;
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 100vh;
 }
 
+#section-4{
+    
+}
 
 
 
