--- a/css/style.css
+++ b/css/style.css
@@ -86,18 +86,8 @@ p{
 
 
 
-
-
-
-
-
-
-
 #page-intro{
-    background-size:cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    -webkit-background-size: cover;
+    height: 100vh;
  }
 
 #page-intro h1{
@@ -180,8 +170,8 @@ p{
 }
 
 .logo{
-  display: inline-block;
-  padding-top: 2.5%;
+
+  padding-top: 5vh;
   text-align: center;
   width: 100%;
 }
@@ -266,274 +256,16 @@ footer li{
 }
 
 
-/*
-
-.row{
-  margin: 0; 
-  height: 100vh
-}
-
-
-.hero{
-    background: url(../images/exp-hero.jpg);
-    background-size:cover;
-    width: 100%;
-    background-position:center; 
-    background-attachment: absolute;
-}
-
-header h1{
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-top: 17.5%;
-  margin-left: 7%;
-  font-size: 320%;
-}
-
-header h4{
-  margin-top: 0.5%;
-  margin-bottom: 0;
-  margin-left: 7%;
-  font-weight: 300;
-}
-
-header li{
-  list-style: none;
-  margin-top: 3%;
-  font-size: 14px;
-  letter-spacing: 0.5px;
-  font-weight: 700;
-}
-
-.button{
-  border: 4px solid;
-  border-radius: 4em;
-  border-color: #C65030;
-  display: inline-block;
-  margin-top: 1.5%;
-  margin-left: 7%;
-  height: 3.2em;
-  width: 20em;
-  text-align: center;
-}
-
-.headlights{
-    background: url(../images/exp-headlight.jpg) no-repeat;
-    background-size:contain;
-    background-position:100% 70%;
-  
-}
-
-.headlights h2{
-  margin-top: 10%;
-  margin-left: 7%;
-  color: #167861;
-
-}
-
-.headlights p{
-  margin-left: 7%;
-  display: block;
-  width: 65%;
-  font-size: 15px;
-  line-height: 2;
-}
-
-
-.inside{
-    background: url(../images/exp-interior.jpg);
-    background-size:cover;
-    background-position:center;
-    background-attachment: absolute;
-   
-}
-
-.inside h1{
-    padding-top: 15%;
-    font-size: 300%;
-    text-align: center;
-}
-
-.back{
-    background: url(../images/exp-tail.jpg) no-repeat;
-    background-size:contain;
-    background-position: 100% 65%;
-    height: 100vh;
- }
-
-.back h2{
-  margin-top: 10%;
-  margin-left: 7%;
-  color: #167861;
-}
-
-.back p{
-  margin-left: 7%;
-  display: block;
-  width: 65%;
-  font-size: 15px;
-  line-height: 2;
-}
-
-.steering{
-    background: url(../images/exp-steering.jpg) ;
-    background-size:cover;
-    height: 100%;
-    background-position:center;
-    background-attachment: absolute;
-
-}
-
-.steering h1{
-    padding-top: 15%;
-    font-size: 300%;
-    text-align: center;
-}
-
-.logo{
-  display: inline-block;
-  padding-top: 2.5%;
-  text-align: center;
-  width: 100%;
-
-}
-
-.img-fluid{
-    max-width: 90px;
-}
-
-.bottom-title{
-  width: 100%;
-  text-align: center;
-  padding-top: 1%;
-  padding-left: 0;
-  padding-right: 0;
-}
-
-
-.ending .row{
-  padding-top: 4%;
-}
-
-.ending .img-fluid{
-  max-width: 60%;
- margin-top: 11%;
-}
-
-.ending h1{
-  padding-left: 15%;
-  margin-top: 10%;
-  font-size: 350%;
-  color: #167861;
-}
-
-.ending .col-lg-6 p{
-  padding-left: 15%;
-  padding-right: 11%;
-  line-height: 2;
-}
-
-.ending li{
-  list-style-type: none;
-  font-weight: 700;
-  letter-spacing: 0.5px;
-  font-size: 14px;
-  margin-top: 3%;
-}
-
-.ending .button{
-  border: 4px solid;
-  border-radius: 4em;
-  border-color: #C65030;
-  display: inline-block;
-  margin-top: 10%;
-  margin-left:0;
-  height: 3.2em;
-  width: 20em;
-  text-align: center;
-}
-
-.icons img{
-  padding-top: 0%;
-  padding-left: 1%;
-  padding-right: 1%;
-  padding-bottom: 6%;
-}
-
-.icons .img-fluid{
-  max-width: 60px;
-}
-
-footer li{
-  list-style-type: none;
-  letter-spacing: 0.5px;
-  font-size: 12px;
-  line-height: 3;
-  display: block;
-}
-
-.right-side{
-  margin-left: 0%;
-  margin-right: 0%;
-}
-
-
-.ending .row{
-  height: auto;
-}
-
-footer .row{
-  height: auto;
-}
-
-
-
-
-
-
 
 @media (max-width:500px) {
-   .hero{
-     padding:1.5em 0%;
-     background-position: right;
-     width:100%;
-     position: fixed no-repeat;
-   }
+ 
 
-   .headlights{
-     padding:1.5em 0%;
-     float:right;
-     width:100%;
-     position: fixed no-repeat;
-   }
-
-  .inside{
-     padding:1.5em 0%;
-     float:right;
-     width:100%;
-     position: fixed no-repeat;
-   }
-
-     .back{
-     padding:1.5em 0%;
-     float:right;
-     width:100%;
-     position: fixed no-repeat;
-   }
-
-     .steering{
-     padding:1.5em 0%;
-     float:right;
-     width:100%;
-     position: fixed no-repeat;
-   }
-
-   header h1{
+   #page-intro h1{
     font-size: 225%;
     padding-top:10%;
    }
 
-   .inside h1 {
+   #section-3 h1 {
      width:46%;
      text-align:left;
      font-size: 225%;
@@ -542,7 +274,7 @@ footer .row{
      margin-top: 20%;
    }
 
-   .steering h1 {
+   .section-5 h1 {
      width:46%;
      text-align:left;
      font-size: 225%;
