--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 html{
     overflow-x: hidden; 
 }
@@ -8,7 +9,6 @@ html{
    background-color: #08110D;
    margin: 0;
 }
-
 
 h1, h2, h3, h4, h5, h6{
     font-weight: 500;
@@ -21,67 +21,25 @@ p{
   font-size: 13px;
 }
 
-
-.skrollr-desktop body {
-    height:100% !important;
-}
-
-#skrollr-body {
-    height:100%;
-    position:relative;
-    overflow: hidden;
+.row{
+  margin: 0; 
+  height: 100vh;
 }
 
 
-.parallax-image.skrollable {
-    display:block;
-}
 
-.no-skrollr .parallax-image-wrapper {
-    display:none !important;
-}
 
-.parallax-image-wrapper {
-    position:fixed;
-    left:0;
-    width:100%;
-    overflow:hidden;
-    height:100vh;
-    top:-100vh;
-}
 
-.parallax-image {
-    display:none;
-    position:absolute;
-    bottom:0;
-    left:0;
-    width:100%;
-    background-repeat:no-repeat;
-    background-position:center;
+
+#section1{
+    background: url(../images/exp-hero.jpg) ;
     background-size:cover;
-    height:100vh;
-    top:0;
+    height: 100%;
+    background-position:center; 
+ 
 }
 
-
-
-
-.gap {
-    background-size:cover;
-    height:100vh;
-    color: white;
-}
-.skrollr .gap {
-    background: transparent !important;
-}
-
-
-#page-intro{
-    height: 100vh;
-    
- }
-
-#page-intro h1{
+#section1 h1{
   margin-top: 0;
   margin-bottom: 0;
   padding-top: 17.5%;
@@ -89,14 +47,14 @@ p{
   font-size: 320%;
 }
 
-#page-intro h4{
+#section1 h4{
   margin-top: 0.5%;
   margin-bottom: 0;
   margin-left: 7%;
   font-weight: 300;
 }
 
-#page-intro li{
+#section1 li{
   list-style: none;
   margin-top: 3%;
   font-size: 14px;
@@ -120,13 +78,20 @@ p{
 
 
 
-#section-2 h2{
+#section2{
+    background: url(../images/exp-headlight.jpg) no-repeat;
+    background-size:contain;
+    background-position:100% 70%;
+}
+
+#section2 h2{
   margin-top: 10%;
   margin-left: 7%;
   color: #167861;
+
 }
 
-#section-2 p{
+#section2 p{
   margin-left: 7%;
   display: block;
   width: 65%;
@@ -134,42 +99,76 @@ p{
   line-height: 2;
 }
 
-#section-4 h2{
-  margin-top: 10%;
-  margin-left: 7%;
-  color: #167861;
+
+
+
+
+
+
+#section3{
+    background: url(../images/exp-interior.jpg);
+    background-size:cover;
+    background-position:center;
 }
 
-#section-4 p{
-  margin-left: 7%;
-  display: block;
-  width: 65%;
-  font-size: 15px;
-  line-height: 2;
-}
-
-#section-3 h1{
+#section3 h1{
     padding-top: 15%;
     font-size: 300%;
     text-align: center;
 }
 
-#section-5 h1{
+
+
+
+
+
+#section4{
+    background: url(../images/exp-tail.jpg) no-repeat;
+    background-size:contain;
+    background-position: 100% 65%;
+    height: 100vh;
+ }
+
+#section4 h2{
+  margin-top: 10%;
+  margin-left: 7%;
+  color: #167861;
+}
+
+#section4 p{
+  margin-left: 7%;
+  display: block;
+  width: 65%;
+  font-size: 15px;
+  line-height: 2;
+}
+
+
+
+
+
+#section5{
+    background: url(../images/exp-steering.jpg);
+    background-size:cover;
+    height: 100%;
+    background-position:center;
+}
+
+#section5 h1{
     padding-top: 15%;
     font-size: 300%;
     text-align: center;
 }
 
 .logo{
-
-  padding-top: 5vh;
+  display: inline-block;
+  padding-top: 2.5%;
   text-align: center;
   width: 100%;
 }
 
-.img-fluid{
-    max-width: 90px;
-}
+
+
 
 .bottom-title{
   width: 100%;
@@ -180,42 +179,44 @@ p{
 }
 
 
-.ending .row{
-  padding-top: 4%;
+#section6 .row{
+  padding-top: 2%;
 }
 
-.ending .img-fluid{
-  max-width: 60%;
- margin-top: 11%;
+
+#section6  .largelogo{
+  max-width: 80%;
+ margin-top: 2%;
 }
 
-.ending h1{
+
+#section6  h1{
   padding-left: 15%;
-  margin-top: 10%;
   font-size: 350%;
   color: #167861;
 }
 
-.ending .col-lg-6 p{
+
+#section6 .col-lg-6 p{
   padding-left: 15%;
   padding-right: 11%;
   line-height: 2;
 }
 
-.ending li{
+
+#section6 .button li{
   list-style-type: none;
   font-weight: 700;
   letter-spacing: 0.5px;
   font-size: 14px;
-  margin-top: 3%;
 }
 
-.ending .button{
+
+#section6  .button{
   border: 4px solid;
   border-radius: 4em;
   border-color: #C65030;
   display: inline-block;
-  margin-top: 3vh;
   margin-left:0;
   height: 3.2em;
   width: 20em;
@@ -223,40 +224,75 @@ p{
 }
 
 .icons img{
+  display: inline-block;
+  width: 100;
   padding-top: 0%;
   padding-left: 1%;
   padding-right: 1%;
-  padding-bottom: 3%;
 }
 
-.icons .img-fluid{
-  max-width: 60px;
-}
 
-footer .row{
-    height: auto;
-}
-
-footer li{
+#section6 li{
   list-style-type: none;
   letter-spacing: 0.5px;
-  font-size: 10px;
+  font-size: 12px;
   line-height: 3;
-  display: inline-block;
-  text-align:center;
+  display: block;
+}
+
+.footer{
+    font-weight: 300;
+    display: inline-block;
+}
+
+#section6 .row{
+  height: auto;
 }
 
 
-
+/* MEDIA */
 @media (max-width:500px) {
- 
+   #section1{
+     padding:1.5em 0%;
+     background-position: right;
+     width:100%;
+   
+   }
 
-   #page-intro h1{
+   #section2{
+     padding:1.5em 0%;
+     float:right;
+     width:100%;
+ 
+   }
+
+  #section3{
+     padding:1.5em 0%;
+     float:right;
+     width:100%;
+
+   }
+
+     #section4{
+     padding:1.5em 0%;
+     float:right;
+     width:100%;
+  
+   }
+
+     #section5{
+     padding:1.5em 0%;
+     float:right;
+     width:100%;
+    
+   }
+
+   #section1 h1{
     font-size: 225%;
     padding-top:10%;
    }
 
-   #section-3 h1 {
+   #section3 h1 {
      width:46%;
      text-align:left;
      font-size: 225%;
@@ -265,7 +301,7 @@ footer li{
      margin-top: 20%;
    }
 
-   .section-5 h1 {
+   #section5 h1 {
      width:46%;
      text-align:left;
      font-size: 225%;
@@ -274,32 +310,57 @@ footer li{
      margin-top: 20%;
    }
      
+    #section6 h1 {
+     width:100%;
+     text-align:left;
+     font-size: 200%;
+     display: block;
+    }
+    
+    #section6 .col-lg-6 p{
+    font-size: 80%;
+    }
+    
+     #section6 .largelogo{
+     width:50%;
+    }
+    
+    #section6 .icons {
+     width:50%;
+    }
 }
 
 
 @media (max-width:700px) {
 
-   .inside h1 {
+   #section3 h1 {
      text-align:left;
      display: block;
      margin-left: 7%;
      font-size: 280%
    }
 
-   .steering h1 {
+   #section5 h1 {
 
      text-align:left;
      display: block;
      margin-left: 7%;
      font-size: 280%;
    }
+     #section6 .largelogo{
+     width:30%;
+    }
 }
 
 
 @media (max-width:850px) {
 
-   header h1{
+   section1 h1{
     font-size: 280%;
     padding-top:14%;
    }
+    #section6 .largelogo{
+     width:30%;
+    }
 }
+
