--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ p{
     background-size:cover;
     height: 100%;
     background-position:center; 
+    height: 100vh;
  
 }
 
@@ -82,6 +83,7 @@ p{
     background: url(../images/exp-headlight.jpg) no-repeat;
     background-size:contain;
     background-position:100% 70%;
+    height: 100vh;
 }
 
 #section2 h2{
@@ -109,6 +111,7 @@ p{
     background: url(../images/exp-interior.jpg);
     background-size:cover;
     background-position:center;
+    height: 100vh;
 }
 
 #section3 h1{
@@ -152,6 +155,7 @@ p{
     background-size:cover;
     height: 100%;
     background-position:center;
+    height: 100vh;
 }
 
 #section5 h1{
