--- a/css/style.css
+++ b/css/style.css
@@ -32,13 +32,44 @@ p{
 
 
 
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+    height: 10%;
+    position: absolute;
+    z-index: 1;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 #section1{
-    background: url(../images/exp-hero.jpg) ;
+    background: url(../images/exp-hero.jpg)fixed;
     background-size:cover;
     height: 100%;
     background-position:center; 
     height: 100vh;
+    z-index: 1;
  
 }
 
@@ -279,9 +310,7 @@ hr{
   -webkit-animation-duration: 2s;
   animation-duration: 2s;
 }  
-.fp-tableCell{
-    display: block;
-}
+
 
 
 
@@ -289,31 +318,30 @@ hr{
 @media (max-width:580px) {
    #section1{
      background-position: right;
-     width:100%;
-   
+     height: 100vh;
    }
 
    #section2{
      float:right;
-     width:100%;
+     height: 100vh;
  
    }
 
   #section3{
      float:right;
-     width:100%;
+     height: 100vh;
 
    }
 
      #section4{
      float:right;
-     width:100%;
+     height: 100vh;
   
    }
 
      #section5{
      float:right;
-     width:100%;
+     height: 100vh;
     
    }
 
