--- a/css/style.css
+++ b/css/style.css
@@ -53,9 +53,10 @@ p{
 
 
 
+.fp-tableCell {
+    display: none;
 
-
-
+}
 
 
 
@@ -310,7 +311,7 @@ hr{
   -webkit-animation-duration: 2s;
   animation-duration: 2s;
 }  
-*/
+
 
 
 
