--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 body{
     background-color: #08110D;
     color: #fcfcfc;
@@ -31,6 +32,7 @@ li{
     list-style: none;
 }
 
+
 #section1{
     align-items: center;
     background: url(../images/exp-hero.jpg) fixed;
@@ -39,6 +41,7 @@ li{
     display: flex;
     height: 100vh;
     justify-content: center;
+    width: 100%;
 }
 
 #section2{
@@ -49,6 +52,7 @@ li{
     display: flex;
     height: 100vh;
     justify-content: center;
+    width: 100%;
 }
 
 #section3{
@@ -59,6 +63,7 @@ li{
     height: 100vh;
     justify-content: center;
     text-align: center;
+    width: 100%;
 }
 
 #section4{
@@ -69,6 +74,7 @@ li{
     display: flex;
     height: 100vh;
     justify-content: center;
+    width: 100%;
 }
 
 #section5{
@@ -80,6 +86,7 @@ li{
     height: 100vh;
     justify-content: center;
     text-align: center;
+    width: 100%;
 }
 
 #section6{
@@ -102,36 +109,39 @@ li{
 
 .text-container{
     width: 100%;
-    padding: 0px 5%;
 }
 
 #section1 .text-container{
-    width: 100%;
-    padding: 0px 5% 100px;
+    padding: 0px;
 }
 
 .headline-with-paragraph h2{
     color: #167861;
     font-size: 2.75em;
-    padding-bottom: 10px;
+    padding: 0px 0px 10px 3%;
 }
 
 .headline-with-paragraph p{
-    font-size: 1.05em;
+    font-size: 15px;
     margin:0px;
+    width: 310px;
+    padding: 0px 0px 0px 3%;
 }
 
 .headline-only-section h1{
     font-size: 3.25em;
+    padding: 0px 0px 0px 3%;
 }
 
 #section1 h1{
     font-size: 3.25em;
+    padding-left: 10px;
 }
 
 #section1 h4{
-    font-size: 2em;
+    font-size: 1.75em;
     margin-top: 15px;
+    padding-left: 10px;
 }
 
 .button{
@@ -139,15 +149,16 @@ li{
     border: 5px solid #C65030;
     border-radius: 100px;
     margin-top: 15px;
+    margin-left: 10px;
 }
 
 .button li{
-    padding: 7px 30px;
+    padding: 7px 20px;
 }
 
 #section6 h1{
     color:#167861;
-    font-size: 3em;
+    font-size: 2.5em;
     padding-top: 35px;
     text-align: center;
 }
@@ -166,6 +177,7 @@ li{
 .body-copy{
     align-items: center;
     display: flex;
+    font-size: 15px;
     justify-content: center;
     margin-top: 25px;
     text-align: center;
@@ -176,7 +188,7 @@ li{
     display: block;
     line-height: 1.5;
     text-align: center;
-    width: 320px;
+    width: 310px;
 }
 
 #section6 .button-container{
@@ -222,7 +234,7 @@ li{
 
 @media (max-width:500px){
     .headline-only-section h1{
-        font-size: 2.50em;
+        font-size: 2em;
         text-align: left;
     } 
     
@@ -230,9 +242,17 @@ li{
         padding-bottom: 100px;
     }
     
+    .headline-with-paragraph h2{
+        font-size: 2em;
+    }
+    
     .footer ul{
         padding: 0px;
         display: block;
+    }
+    
+    #section1 h1{
+        font-size:2.5em;
     }
 }
 
